<resources>
    <string name="app_name">TaskApp</string>
    <string name="agregar_categoria">Agregar Categoria</string>

    <string name="mostrar_lista">Mostrar Lista</string>
    <string name="registro_de_categoria">Registro de Categoria</string>
    <string name="nombre">Nombre</string>
    <string name="categoria">Categoria</string>
    <string name="guardar">Guardar</string>
    <string name="_10">10</string>
    <string name="textview">TextView</string>
    <string name="usuario">Usuario</string>
    <string name="email">email</string>
    <string name="registrar">Registrar</string>
    <string name="contrace_a">Contraceña</string>
    <string name="confirmar_contrace_a">confirmar contraceña</string>
    <string name="cancelar">Cancelar</string>


    <string name="btnregistrarse">Registrarse</string>
    <string name="iniciar">Iniciar</string>
    <string name="email_a">Email</string>

    <string name="comfirmar_contrace_a">Comfirmar Contraceña</string>
    <string name="tpo_de_usuario">Tpo de Usuario</string>
    <string name="tecnico">TECNICO</string>
    <string name="normal">NORMAL</string>
    <string name="contrace_confirmar_a">contraceña</string>
    <string name="mostrar_lista_categoria">Mostrar Lista categoria</string>
    <!--<string name="agregar_categoria">Agregar Categoria</string>-->
    <string name="registrarse">Registrarse</string>
    <string name="todos">Todos</string>
    <string name="mostrarcategoria">MostrarCategoria</string>
</resources>
