<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.LoginRegistroActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="344dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="34dp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:hint="@string/email"
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="53dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/nombre"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="119dp" />

        <EditText
            android:id="@+id/txtnombre"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:layout_marginLeft="10dp"
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="139dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrace_a"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="213dp" />

        <EditText
            android:id="@+id/txtContraceña"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:hint="@string/contrace_confirmar_a"
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="232dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comfirmar_contrace_a"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="291dp" />

        <EditText
            android:id="@+id/txtConfirmarContracena"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:hint="@string/confirmar_contrace_a"
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="310dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/tpo_de_usuario"
            android:textColor="@android:color/black"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="368dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdTecnico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="110dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/tecnico"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="404dp" />

            <RadioButton
                android:id="@+id/rdNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/normal"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="228dp"
                tools:layout_editor_absoluteY="404dp" />
        </RadioGroup>
        >


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="354dp"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="60dp"
            android:text="@string/cancelar"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="459dp" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="232dp"
            tools:layout_editor_absoluteY="459dp" />

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.010416667" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />


</android.support.constraint.ConstraintLayout>