<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ado.edu.itlas.taskapp.vista.LoginActivity">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="74dp" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="93dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrace_a"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="173dp" />

    <EditText
        android:id="@+id/txtContraceña"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contrace_a"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="192dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="300dp">

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/lblRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textColor="@android:color/holo_blue_dark"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="300dp" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:textColor="@android:color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="300dp" />

</android.support.constraint.ConstraintLayout>